force-app/main/default/objects/bpats__ASM_Job_Mapping__mdt/bpats__ASM_Job_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ASM Job Mapping</label>
    <pluralLabel>ASM Job Mappings</pluralLabel>
</CustomObject>