force-app/main/default/objects/bpats__ASM_Job_Mapping__mdt/fields/bpats__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>bpats__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>