force-app/main/default/objects/bpats__ASM_Job_Mapping__mdt/fields/bpats__Is_Sync__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Sync__c</fullName>
    <label>Is Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>