force-app/main/default/objects/bpats__ASM_Job_Mapping__mdt/fields/bpats__Mapped_Object__c.field-meta.xml
<CustomField>
    <fullName>bpats__Mapped_Object__c</fullName>
    <label>Mapped Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>