force-app/main/default/objects/bpats__ASM_Job_Mapping__mdt/fields/bpats__Section__c.field-meta.xml
<CustomField>
    <fullName>bpats__Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
                <default>true</default>
                <label>Job</label>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>